--- a/Alarmni-sistemi-ugradnja-i-oprema.html
+++ b/Alarmni-sistemi-ugradnja-i-oprema.html
@@ -4,14 +4,16 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Video nadzor - ugradnja, kamere, oprema i servis  - Maximus security </title>
-  <meta name="description" content="Maximus Security pruža kompletna rešenja za video nadzor, ugradnju alarmnih i protivpožarnih sistema, kao i elektroinstalacije i kontrolu prolaza. U ponudi su rendgen skeneri, metal detektorska vrata, iznajmljivanje metal detektorskih vrata, ručni metal detektori, interfonski sistemi, rampe i motori za kapije. Profesionalno projektovanje, ugradnja, oprema i servis širom Srbije.">
+  <title>Najbezbedniji alarmi i alarmni sistemi za detekciju provale, HIKVISION, Paradox - Maximus security </title>
+  <meta name="description" content="Maximus Security projektuje, ugrađuje i održava alarmne sisteme za domove i poslovne prostore koji omogućavaju real-time obaveštenja, daljinsko upravljanje putem mobilne aplikacije i potpunu kontrolu sigurnosti objekta - bilo da se nalazite kod kuće ili na putu.
+Naši sistemi nude i mogućnost integracije sa video nadzorom i pametnim uređajima, čime obezbeđuju sveobuhvatnu i savremenu zaštitu prostora">
 
 
-  <meta property="og:title" content="Čuvamo ono što vam znači - Maximus security " />
-  <meta property="og:description" content="Maximus Security pruža kompletna rešenja za video nadzor, ugradnju alarmnih i protivpožarnih sistema, kao i elektroinstalacije i kontrolu prolaza. U ponudi su rendgen skeneri, metal detektorska vrata, iznajmljivanje metal detektorskih vrata, ručni metal detektori, interfonski sistemi, rampe i motori za kapije. Profesionalno projektovanje, ugradnja, oprema i servis širom Srbije." />
-  <meta property="og:image" content="#" />
-  <meta property="og:url" content="kamere-za-video-nadzor-ugradnja-i-oprema.html" />
+  <meta property="og:title" content="Najbezbedniji alarmi i alarmni sistemi za detekciju provale - Maximus security " />
+  <meta property="og:description" content="Maximus Security projektuje, ugrađuje i održava alarmne sisteme za domove i poslovne prostore koji omogućavaju real-time obaveštenja, daljinsko upravljanje putem mobilne aplikacije i potpunu kontrolu sigurnosti objekta - bilo da se nalazite kod kuće ili na putu.
+Naši sistemi nude i mogućnost integracije sa video nadzorom i pametnim uređajima, čime obezbeđuju sveobuhvatnu i savremenu zaštitu prostora" />
+  <meta property="og:image" content="https://www.example.com/image.jpg" />
+  <meta property="og:url" content="Alarmni-sistemi-ugradnja-i-oprema.html" />
   <meta property="og:type" content="article" />
 
   <!-- Bootstrap 5.3.7 -->
@@ -56,12 +58,12 @@
         <ul class="navbar-nav align-items-lg-center">
           <!-- Video nadzor -->
           <li class="nav-item ">
-            <a class="nav-link active-nav-item" href="kamere-za-video-nadzor-ugradnja-i-oprema.html">Video nadzor</a>
+            <a class="nav-link" href="kamere-za-video-nadzor-ugradnja-i-oprema.html">Video nadzor</a>
           </li>
 
           <!-- Alarmni sistemi -->
           <li class="nav-item">
-            <a class="nav-link" href="Alarmni-sistemi-ugradnja-i-oprema.html">Alarmni sistemi</a>
+            <a class="nav-link active-nav-item" href="Alarmni-sistemi-ugradnja-i-oprema.html">Alarmni sistemi</a>
           </li>
 
           <!-- Kontrola prolaza -->
@@ -283,10 +285,8 @@
   </a>
 </div>
 
-            <h1 class=" fw-bold mb-2 lh-1 mt-20">Video nadzor <br><span class="h1-below">ugradnja, kamere, oprema i servis </span></h1><br>    
-            <h2 class="lead text-secondary mb-3 white">Kompletna rešenja iz oblasti video nadzora - od projektovanja i ugradnje do održavanja.
- <strong class="accent">Sa više od 13 godina iskustva</strong>, pružamo pouzdane i efikasne sisteme sigurnosti za stambene, poslovne i industrijske objekte.
-            </h2>
+            <h1 class=" fw-bold mb-2 lh-1 mt-20">Alarmi i alarmni sistemi <br><span class="h1-below">ugradnja, oprema i servis </span></h1><br>    
+            <h2 class="lead text-secondary mb-3 white">Nudimo projektovanje, ugradnju i održavanje alarmnih sistema za domove i poslovne prostore. Koji omogućavaju real-time obaveštenja, daljinsko upravljanje putem mobilne aplikacije kao i integraciju sa video nadzorom i pametnim uređajima, čime obezbeđuju sveobuhvatnu i savremenu zaštitu prostora.</h2>
            
             <!-- stack on xs, row from sm and up -->
             <div class="d-flex flex-column flex-sm-row gap-2 mt-50">
@@ -306,7 +306,7 @@
 
           <!-- RIGHT: BADGE + COPY + CTAs -->
           <div class="col-12 col-lg-4 mt-3 mt-lg-0 text-center text-lg-end d-none d-lg-block">
-            <img src="assets/images/Video-nadzor–ugradnja-oprema-i-servis-beograd-novi-sad-srbija.png" class="img-fluid" alt="Video nadzor ilustracija">
+            <img src="assets/images/Alarmni-sistemi-ugradnja-oprema-i-servis-sirom-Srbije.png" class="img-fluid" alt="Video nadzor ilustracija">
           </div>
         </div>
       </div>
@@ -320,7 +320,7 @@
         <div class="metric-card">
           <div class="metric-value">13+</div>
           <div class="metric-label">Godina iskustva </div>
-          <p class="metric-desc mb-0">Pouzdano projektovanje i instalacija sistema video nadzora širom Srbije.</p>
+          <p class="metric-desc mb-0">Pouzdano projektovanje i instalacija alarmnih sitema širom Srbije.</p>
         </div>
       </div>
       <div class="col-12 col-md-6 col-xl-3">
@@ -341,7 +341,7 @@
         <div class="metric-card">
           <div class="metric-value">100%</div>
           <div class="metric-label">Zagarantovan kvalitet</div>
-          <p class="metric-desc mb-0">Garantujemo stabilan rad, kvalitetnu sliku, najkvalitetniju opremu i dugotrajnu zaštitu.</p>
+          <p class="metric-desc mb-0">Garantujemo stabilan rad, najkvalitetniju opremu i dugotrajnu zaštitu.</p>
         </div>
       </div>
     </div>
