--- a/index.html
+++ b/index.html
@@ -256,124 +256,18 @@
   <!-- Demo content -->
   <main>
     <!-- Hero Section -->
-    <section class="hero w-100 position-relative overflow-hidden text-white">
-      <div class="container">
-        <div class="row align-items-center hero-inner px-3 mx-auto">
-          <!-- LEFT: BIG HEADLINE -->
-          <div class="col-12 col-lg-7">
-            <!-- <div class="mb-3">
-          <span class="badge rounded-pill border border-white text-light fw-semibold px-3 py-1" style="background-color: rgba(255, 255, 255, 0.5);">
-            Nudimo
-          </span>
-        </div> -->
-            <h1 class="hero-title fw-bold mb-2 lh-1">
-              Rešite zakonsku obavezu <span class="accent">gromobrana.</span>
-            </h1>
-          </div>
+<!-- Hero: Split columns -->
+<section class="hero hero-split w-100 position-relative overflow-hidden text-white">
+  <div class="container-fluid px-0">
+    <div class="row g-0">
+    
 
-          <!-- RIGHT: BADGE + COPY + CTAs -->
-          <div class="col-12 col-lg-5 mt-3 mt-lg-0">
-            <p class="lead text-secondary mb-3 white">
-              <strong class="underline">Od izrade potrebne dokumentacije do kompletne montaže</strong>. Mi preuzimamo
-              ceo proces umesto vas - Sve rešavate na jednom mestu!!
-            </p>
-            <!-- stack on xs, row from sm and up -->
-            <div class="d-flex flex-column flex-sm-row gap-2">
-              <a href="tel:+38162421515" aria-label="Pozovite 062 42 15 15" class="btn btn-light btn-md px-3 fw-semibold rounded-pill btn-cut-primary">Pozovite nas <i
-                  class="bi bi-telephone-fill ms-1"></i></a>
-              <a href="#" class="btn btn-outline-light btn-md px-3 fw-semibold rounded-pill hero-ghost btn-straight">Saznajte više <i
-                  class="bi bi-arrow-right ms-1"></i></a>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
+    </div>
+  </div>
+</section>
 
 
-    <div class="clearfix"></div>
-    <!-- 3 Cards Section (overlap hero) -->
-    <section class="cards-overlap position-relative">
-      <div class="scroll-indicator d-sm-none" title="Skrolujte za više">
-        <i class="bi bi-chevron-compact-down"></i>
-        <span class="visually-hidden">Skrolujte za više sadržaja</span>
-      </div>
-      <div class="container">
-        <div class="row gap-4 justify-content-center">
 
-          <!-- Card 1 -->
-          <div class="col-12 col-sm-12 col-lg-3">
-            <div class="profile-card shadow-lg h-100">
-              <img class="pc-img" src="assets/images/Product_ColorVu.jpg" alt="Video nadzor">
-              <div class="pc-blur"></div>
-              <div class="pc-meta d-flex flex-column justify-content-end">
-                <div>
-                  <h5 class="pc-name mb-1 text-white">Kompletna rešenja za video nadzor</h5>
-                  <p class="mb-3 text-white-75 small">Najmodernije kamere i oprema, sa FullHD, 2K, 3K i 4K snimcima.
-                  </p>
-                  <div class="d-flex align-items-center justify-content-between">
-                    <div class="d-flex gap-3 small text-white-75">
-                      <button class="btn btn-outline-danger btn-sm rounded-pill fw-semibold px-3">
-                        Pogledajte ponudu <i class="bi bi-plus-lg ms-1"></i>
-                      </button>
-                    </div>
-
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <!-- Card 2 -->
-          <div class="col-12 col-sm-12 col-lg-3">
-            <div class="profile-card shadow-lg h-100">
-              <img class="pc-img" src="assets/images/metel-detektor-vrata.png" alt="Iznajmljivanje metal detektora">
-              <div class="pc-blur"></div>
-              <div class="pc-meta d-flex flex-column justify-content-end">
-                <div>
-                  <h5 class="pc-name mb-1 text-white">Iznajmljivanje i prodaja metal detektorskih vrata</h5>
-                  <p class="mb-3 text-white-75 small">Rendgen/X-Ray skeneri, ručni detektori metala i ostala sigurnosna
-                    oprema.</p>
-                  <div class="d-flex align-items-center justify-content-between">
-                    <div class="d-flex gap-3 small text-white-75">
-                      <button class="btn btn-outline-danger btn-sm rounded-pill fw-semibold px-3">
-                        Pogledajte ponudu <i class="bi bi-plus-lg ms-1"></i>
-                      </button>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <!-- Card 3 -->
-          <div class="col-12 col-sm-12 col-lg-3">
-            <div class="profile-card shadow-lg h-100">
-              <img class="pc-img" src="assets/images/elektro-instalacije-beograd-novi-sad-maximus-security.jpg"
-                alt="Elektro instalacije">
-              <div class="pc-blur"></div>
-              <div class="pc-meta d-flex flex-column justify-content-end">
-                <div>
-                  <h5 class="pc-name mb-1 text-white">Elektro instalacije</h5>
-                  <p class="mb-3 text-white-75 small">Profesionalna i sigurna ugradnja svih elektro sistema.</p>
-                  <div class="d-flex align-items-center justify-content-between">
-                    <div class="d-flex gap-3 small text-white-75">
-                      <button class="btn btn-outline-danger btn-sm rounded-pill fw-semibold px-3">
-                        Pogledajte ponudu <i class="bi bi-plus-lg ms-1"></i>
-                      </button>
-                      <!-- <span class="d-inline-flex align-items-center gap-1"><i class="bi bi-people"></i> 402</span>
-                  <span class="d-inline-flex align-items-center gap-1"><i class="bi bi-heart"></i> 73</span> -->
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-
-        </div><!-- /.row -->
-      </div><!-- /.container -->
-    </section>
-    <br><br>
-    </section>
 
     <!-- Reference -->
     <section class="text-light py-5 reference-section">
