--- a/index.html
+++ b/index.html
@@ -14,6 +14,12 @@
   <meta property="og:url" content="https://www.example.com/article/og-meta-tags" />
   <meta property="og:type" content="article" />
 
+  <link rel="apple-touch-icon" sizes="180x180" href="/assets/images/favicon/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/assets/images/favicon/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/assets/images/favicon/favicon-16x16.png">
+  <link rel="manifest" href="/assets/images/favicon/site.webmanifest">
+  <link rel="shortcut icon" href="/assets/images/favicon/favicon.ico">
+
   <!-- Bootstrap 5.3.7 -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet">
   <!-- Poppins font (300/400/600/700) -->
