--- a/kamere-za-video-nadzor-ugradnja-i-oprema.html
+++ b/kamere-za-video-nadzor-ugradnja-i-oprema.html
@@ -14,6 +14,12 @@
   <meta property="og:url" content="kamere-za-video-nadzor-ugradnja-i-oprema.html" />
   <meta property="og:type" content="article" />
 
+  <link rel="apple-touch-icon" sizes="180x180" href="/assets/images/favicon/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/assets/images/favicon/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/assets/images/favicon/favicon-16x16.png">
+  <link rel="manifest" href="/assets/images/favicon/site.webmanifest">
+  <link rel="shortcut icon" href="/assets/images/favicon/favicon.ico">
+
   <!-- Bootstrap 5.3.7 -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet">
   <!-- Poppins font (300/400/600/700) -->
@@ -459,8 +465,7 @@ Od početne analize rizika, preko izbora optimalnih kamera i snimača, do komple
       Koristimo najkvalitetnije <br> kamere za video nadzor na tržištu
     </h2>
     <p class="lead text-center text-secondary mb-50 mt-0">
-     
-                    Nudimo projektovanje, izbor i instalaciju kamera (IP, analogne, PTZ), NVR konfiguraciju, mrežno podešavanje i integraciju sa drugim sigurnosnim sistemima. Sistemi u HD, Full HD i 4K rezoluciji, H.265/H.264 kompresiju i ONVIF protokole.</p>
+     l HD i 4K rezoluciji, H.265/H.264 kompresiju i ONVIF protokole.</p>
 
 
     <div class="row g-5">
