--- a/index.html
+++ b/index.html
@@ -354,66 +354,66 @@
   </main>
 
   <!-- Alarmni sistemi sekcija -->
-  <section class="alarmni-bg">
-    <div class="container">
-      <div class="col-md-12 section-breathe">
-        <div class="d-flex justify-content-center mb-3">
-          <span
-            class="badge rounded-pill border border-2 border-white text-white bg-transparent px-4 py-2 fs-5 fw-semibold">Alarmni
-            sistemi</span>
-        </div><br>
-        <h2 class="text-center">Najpouzdaniji sistem zaštite od provalnika</h2>
-        <p class="lead text-secondary text-center mb-3 white">Naši alarmni sistemi obezbeđuju najviši nivo sigurnosti za
-          vašu kuću ili poslovni prostor.</p>
+  <section class="hero hero--construction">
+  <div class="container hero__layout">
+    <div class="hero__content">
+      <p class="hero__eyebrow text-white"><strong>#1 FIRMA ZA UGRADNJU ALARMA <br>U SRBIJI, PREKO 13 GODINA.</strong></p>
+      <h1 class="text-white">
+        Bitno je kome verujete da štiti ono što vam je najvažnije.
+      </h1>
+ <p class="hero__lead text-white">
+  Naši alarmni sistemi omogućavaju:
+</p>
 
-        <div class="row g-4 mt-4">
-          <div class="col-md-6">
-            <div class="row g-3 align-items-start">
-              <div class="col-auto">
-                <span
-                  class="d-inline-flex align-items-center justify-content-center bg-danger text-white rounded-circle"
-                  style="width:48px;height:48px;">
-                  <i class="bi bi-shield-lock fs-5"></i>
-                </span>
-              </div>
-              <div class="col">
-                <p class="mb-0 text-secondary">
-                  Bilo da tražite jednostavan bežični set ili napredan integrisani sistem sa video nadzorom, kod nas
-                  dobijate najsigurnije i najpouzdanije rešenje na tržištu.
-                </p>
-              </div>
-            </div>
-          </div>
+<div class="row text-white mb-4 g-4">
+  <!-- Feature 1 -->
+  <div class="col-4 text-center">
+    <i class="bi bi-bell-fill display-6 mb-2"></i>
+    <p class="fw-semibold mb-0">Real-time obaveštenja</p>
+  </div>
 
-          <div class="col-md-6">
-            <div class="row g-3 align-items-start">
-              <div class="col-auto">
-                <span
-                  class="d-inline-flex align-items-center justify-content-center bg-danger text-white rounded-circle"
-                  style="width:48px;height:48px;">
-                  <i class="bi bi-camera-video fs-5"></i>
-                </span>
-              </div>
-              <div class="col">
-                <p class="mb-0 text-secondary">
-                  U ponudi imamo proverena rešenja renomiranih proizvođača kao što su Paradox i Hikvision – lideri u
-                  oblasti zaštite. Paradox je poznat po izuzetnoj pouzdanosti centralnih jedinica, dok Hikvision
-                  kombinuje alarmne i video sisteme u jedinstvenoj, vrhunskoj zaštiti.
-                </p>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="row justify-content-center my-4">
-          <div class="col-12 col-md-10 col-lg-8 text-center">
-            <!-- Replace the src with your image path -->
-            <img src="assets/images/alarmni-sistemi.png" alt="Alarmni sistem" class="img-fluid rounded-3 shadow-sm"
-              loading="lazy">
+  <!-- Feature 2 -->
+  <div class="col-4 text-center">
+    <i class="bi bi-phone-fill display-6 mb-2"></i>
+    <p class="fw-semibold mb-0">Daljinsko upravljanje aplikacijom</p>
+  </div>
+
+  <!-- Feature 3 -->
+  <div class="col-4 text-center">
+    <i class="bi bi-camera-video-fill display-6 mb-2"></i>
+    <p class="fw-semibold mb-0">Integracija sa video nadzorom</p>
+  </div>
+</div>
+
+<p class="hero__lead text-white">
+  <span>čime obezbeđuju sigurnu, sveobuhvatnu i savremenu zaštitu prostora.</span>
+</p>
+
+
+      <div class="hero__actions">
+        <a href="tel:+38162421515"
+           aria-label="Pozovite 062 42 15 15"
+           class="btn btn-lg px-4 fw-semibold btn-cut-primary btn-cut-primary--dark">
+          Pozovite nas <i class="bi bi-telephone-fill ms-1"></i>
+        </a>
+      </div>
+    </div>
+
+    <div class="hero__media">
+      <div class="hero__photo" style="background-image: url('assets/images/Najbezbedniji-alarmi-i-alarmni-sistemi-ugradnja-oprema-i-servis-Maximus-security-srbija-min.png');"></div>
+      <div class="hero__media-inner">
+        <div class="hero__card">
+          <div class="hero__stars">★★★★★</div>
+          <p>Napokon mirno putujemo. Aplikacija mi odmah javi ako se nešto aktivira i mogu da proverim stanje u sekundi, gde god da sam. Sve radi bez greške.</p>
+          <div class="hero__author">
+            <strong>Martina Đorđević</strong>
+            <span>Privatan korisnik</span>
           </div>
         </div>
       </div>
     </div>
-  </section>
+  </div>
+</section>
   <!-- Alarmni sistemi sekcija -->
 
 
