--- a/kontrola-prolaza/iznajmljivanje-metal-detektorska-vrata.html
+++ b/kontrola-prolaza/iznajmljivanje-metal-detektorska-vrata.html
@@ -73,15 +73,15 @@ Naši sistemi nude i mogućnost integracije sa video nadzorom i pametnim uređaj
           </li>
 
           <!-- Kontrola prolaza -->
-          <li class="nav-item dropdown  active-nav-item">
-            <a class="nav-link dropdown-toggle" href="../metal-detektori-kontrola-prolaza.html" id="kpDrop"
+          <li class="nav-item dropdown  ">
+            <a class="nav-link dropdown-toggle active-nav-item" href="../metal-detektori-kontrola-prolaza.html" id="kpDrop"
               data-bs-toggle="dropdown" data-bs-auto-close="outside" aria-expanded="false">
               Kontrola prolaza
             </a>
 
             <ul class="dropdown-menu" aria-labelledby="kpDrop">
               <!-- Mobile-only overview -->
-              <li class="d-xl-none"><a class="dropdown-item  active-nav-item-sub" href="../metal-detektori-kontrola-prolaza.html">O kontroli
+              <li class="d-xl-none"><a class="dropdown-item" href="../metal-detektori-kontrola-prolaza.html">O kontroli
                   prolaza</a></li>
               <li class="d-xl-none">
                 <hr class="dropdown-divider">
