--- a/kontrola-prolaza/iznajmljivanje-metal-detektorska-vrata.html
+++ b/kontrola-prolaza/iznajmljivanje-metal-detektorska-vrata.html
@@ -99,13 +99,12 @@ Naši sistemi nude i mogućnost integracije sa video nadzorom i pametnim uređaj
                   <li class="d-xl-none">
                     <hr class="dropdown-divider">
                   </li>
-                  <li><a class="dropdown-item" href="../kontrola-prolaza/modeli-metal-detektorska-vrata.html">Modeli MD
-                      vrata</a></li>
+                  <li><a class="dropdown-item" href="../kontrola-prolaza/modeli-metal-detektorska-vrata.html">Svi modeli metal detektorskih vrata</a></li>
                   <li>
                     <hr class="dropdown-divider">
                   </li>
                   <li><a class="dropdown-item  active-nav-item-sub"
-                      href="../kontrola-prolaza/iznajmljivanje-metal-detektorska-vrata.html">Iznajmljivanje MD vrata</a>
+                      href="../kontrola-prolaza/iznajmljivanje-metal-detektorska-vrata.html">Iznajmljivanje metal detektorskih vrata</a>
                   </li>
                 </ul>
               </li>
@@ -291,8 +290,8 @@ Naši sistemi nude i mogućnost integracije sa video nadzorom i pametnim uređaj
   </a>
 </div>
 
-            <h1 class=" fw-bold mb-2 lh-1 mt-20">Iznajmljivanje metal detektorskih vrata <br><span class="h1-below">za svaki događaj širom Srbije</span></h1><br>    
-            <h2 class="lead text-secondary mb-3 white">Ako organizujete događaj ili vam je potrebna privremena kontrola pristupa, iznajmljivanje metal detektorskih vrata je <span class="accent">najbrže i najpraktičnije rešenje</span>. Nudimo moderne, pouzdane i jednostavne za korišćenje modele detektora koji obezbeđuju visok nivo sigurnosti - <span class="accent">bez potrebe za kupovinom i dodatnim ulaganjima</span>.</span></h2>
+            <h1 class=" fw-bold mb-2 lh-1 mt-20">Iznajmljivanje metal detektorskih vrata <br><span class="h1-below">za sve vrste događaja širom Srbije</span></h1><br>    
+            <h2 class="lead text-secondary mb-3 white">najbrže i najpraktičnije rešenje. Naši pouzdani modeli obezbeđuju visok nivo sigurnosti bez dodatnih troškova.</span></h2>
            
             <!-- stack on xs, row from sm and up -->
             <div class="d-flex flex-column flex-sm-row gap-2 mt-50">
@@ -336,7 +335,7 @@ Naši sistemi nude i mogućnost integracije sa video nadzorom i pametnim uređaj
       <div class="col-12 col-md-6 col-xl-3">
         <div class="metric-card">
           <div class="metric-label-vrata">Najnoviji modeli detektora</div>
-          <p class="metric-desc mb-0">Od 6 do 45 zona detekcije, uz preciznu lokalizaciju metalnih predmeta na telu.</p>
+          <p class="metric-desc mb-0">Od 6 do 45 zona detekcije, uz preciznu lokalizaciju metalnih predmeta na telu. <a href="modeli-metal-detektorska-vrata.html">Pogledajte modele u ponudi <i class="bi bi-arrow-right ms-1"></i></a></p>
         </div>
       </div>
       <div class="col-12 col-md-6 col-xl-3">
@@ -368,8 +367,8 @@ Naši sistemi nude i mogućnost integracije sa video nadzorom i pametnim uređaj
         <div class="md-step-h__card">
           <p class="md-step-h__label">Korak 1</p>
           <h3 class="md-step-h__title">Kontaktirajte nas</h3>
-          <p class="mb-3">
-             i kažete gde, kada i koliko vrata vam je potrebno.
+          <p class="mb-3"><br>
+             i podelite sa nama gde, kada, za koji događaj, i koliko vrata vam je potrebno.
           </p>
           <a href="tel:+38162421515"
              aria-label="Pozovite 062 42 15 15"
@@ -388,8 +387,8 @@ Naši sistemi nude i mogućnost integracije sa video nadzorom i pametnim uređaj
         <div class="md-step-h__card">
           <p class="md-step-h__label">Korak 2</p>
           <h3 class="md-step-h__title">Preporuka modela</h3>
-          <p class="mb-0">
-            Na osnovu tipa događaja preporučujemo model vrata koji najbolje odgovara vašim potrebama.
+          <p class="mb-0"><br>
+            Na osnovu tipa događaja preporučujemo model i količinu vrata koji najbolje odgovara vašim potrebama.
           </p>
         </div>
       </div>
@@ -403,7 +402,7 @@ Naši sistemi nude i mogućnost integracije sa video nadzorom i pametnim uređaj
         <div class="md-step-h__card">
           <p class="md-step-h__label">Korak 3</p>
           <h3 class="md-step-h__title">Dostava i montaža</h3>
-          <p class="mb-0">
+          <p class="mb-0"><br>
             Naš tim doprema i montira opremu, vrši testiranje sistema i obuku vašeg osoblja.
           </p>
         </div>
@@ -418,7 +417,7 @@ Naši sistemi nude i mogućnost integracije sa video nadzorom i pametnim uređaj
         <div class="md-step-h__card">
           <p class="md-step-h__label">Korak 4</p>
           <h3 class="md-step-h__title">Period iznajmljivanja</h3>
-          <p class="mb-0">
+          <p class="mb-0"> <br>
             Detektori ostaju kod vas onoliko dana koliko vam je potrebno, uz našu tehničku podršku.
           </p>
         </div>
@@ -433,11 +432,18 @@ Naši sistemi nude i mogućnost integracije sa video nadzorom i pametnim uređaj
         <div class="md-step-h__card">
           <p class="md-step-h__label">Korak 5</p>
           <h3 class="md-step-h__title">Demontaža i prevoz</h3>
-          <p class="mb-0">
+          <p class="mb-0"><br>
             Nakon završenog perioda, naš tim obavlja demontažu i prevoz opreme, bez dodatnih obaveza sa vaše strane.
           </p>
         </div>
       </div>
+    </div>
+
+    <div class="text-center mt-4 pt-30">
+      <a target="_blank" href="modeli-metal-detektorska-vrata.html"
+        class="btn btn-md px-4 fw-semibold btn-straight btn-black-fill">
+        Pogledajte sve modele vrata <i class="bi bi-arrow-right ms-1"></i>
+      </a>
     </div>
   </div>
 </section>
@@ -555,7 +561,107 @@ Naši sistemi nude i mogućnost integracije sa video nadzorom i pametnim uređaj
   </div>
 </section>
 
- 
+<section class="bg-white text-dark section-breathe py-5">
+  <div class="container px-3 px-lg-4">
+    <div class="text-center mb-50">
+      <h2 class="fw-semibold display-6 mb-3">Nudimo najbezbednije <br>modele matal detektorskih vrata</h2>
+      <p class="lead text-secondary mb-0">Odaberite nivo detekcije koji najbolje odgovara vašoj sigurnosnoj situaciji.</p>
+    </div>
+
+    <div class="row g-4">
+      <div class="col-12 col-sm-6 col-lg-4">
+        <div class="card h-100 border-0 shadow-sm rounded-4">
+          <div class="ratio ratio-1x1 bg-light rounded-4 overflow-hidden">
+            <img src="../assets/images/metal-detektor-vrata-sa-6-zona.jpg" class="w-100 h-100 object-fit-cover" alt="Vrata sa 6 zona">
+          </div>
+          <div class="card-body">
+            <h3 class="h5 fw-semibold text-dark">Vrata sa 6 zona</h3>
+            <p class="text-secondary small mb-3">Osnovna kontrola prolaza za manje događaje i sporedne ulaze.</p>
+            <a href="#prijavavideo" class="btn btn-model-outline btn-sm px-3 fw-semibold btn-straight">
+              Detaljnije o vratima <i class="bi bi-arrow-right ms-1"></i>
+            </a>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-12 col-sm-6 col-lg-4">
+        <div class="card h-100 border-0 shadow-sm rounded-4">
+          <div class="ratio ratio-1x1 bg-light rounded-4 overflow-hidden">
+            <img src="../assets/images/metal-detektor-vrata-sa-12-zona.jpg" class="w-100 h-100 object-fit-cover" alt="Vrata sa 12 zona">
+          </div>
+          <div class="card-body">
+            <h3 class="h5 fw-semibold text-dark">Vrata sa 12 zona</h3>
+            <p class="text-secondary small mb-3">Balansiran odnos preciznosti i brzine prolaza za većinu događaja.</p>
+            <a href="#prijavavideo" class="btn btn-model-outline btn-sm px-3 fw-semibold btn-straight">
+              Detaljnije o vratima <i class="bi bi-arrow-right ms-1"></i>
+            </a>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-12 col-sm-6 col-lg-4">
+        <div class="card h-100 border-0 shadow-sm rounded-4">
+          <div class="ratio ratio-1x1 bg-light rounded-4 overflow-hidden">
+            <img src="../assets/images/metal-detektor-vrata-sa-12-zona.jpg" class="w-100 h-100 object-fit-cover" alt="Vrata sa 18 zona">
+          </div>
+          <div class="card-body">
+            <h3 class="h5 fw-semibold text-dark">Vrata sa 18 zona</h3>
+            <p class="text-secondary small mb-3">Detaljnija detekcija uz zadržavanje visokog protoka posetilaca.</p>
+            <a href="#prijavavideo" class="btn btn-model-outline btn-sm px-3 fw-semibold btn-straight">
+              Detaljnije o vratima <i class="bi bi-arrow-right ms-1"></i>
+            </a>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-12 col-sm-6 col-lg-4">
+        <div class="card h-100 border-0 shadow-sm rounded-4">
+          <div class="ratio ratio-1x1 bg-light rounded-4 overflow-hidden">
+            <img src="../assets/images/metal-detektor-vrata-sa-24-zona.jpg" class="w-100 h-100 object-fit-cover" alt="Vrata sa 24 zona">
+          </div>
+          <div class="card-body">
+            <h3 class="h5 fw-semibold text-dark">Vrata sa 24 zona</h3>
+            <p class="text-secondary small mb-3">Precizna segmentacija tela za sigurnosno zahtevne lokacije.</p>
+            <a href="#prijavavideo" class="btn btn-model-outline btn-sm px-3 fw-semibold btn-straight">
+              Detaljnije o vratima <i class="bi bi-arrow-right ms-1"></i>
+            </a>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-12 col-sm-6 col-lg-4">
+        <div class="card h-100 border-0 shadow-sm rounded-4">
+          <div class="ratio ratio-1x1 bg-light rounded-4 overflow-hidden">
+            <img src="../assets/images/metal-detektor-vrata-sa-33-zona.jpg" class="w-100 h-100 object-fit-cover" alt="Vrata sa 33 zona">
+          </div>
+          <div class="card-body">
+            <h3 class="h5 fw-semibold text-dark">Vrata sa 33 zona</h3>
+            <p class="text-secondary small mb-3">Napredna lokalizacija metala za složenije protokole provere.</p>
+            <a href="#prijavavideo" class="btn btn-model-outline btn-sm px-3 fw-semibold btn-straight">
+              Detaljnije o vratima <i class="bi bi-arrow-right ms-1"></i>
+            </a>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-12 col-sm-6 col-lg-4">
+        <div class="card h-100 border-0 shadow-sm rounded-4">
+          <div class="ratio ratio-1x1 bg-light rounded-4 overflow-hidden">
+            <img src="../assets/images/metal-detektor-vrata-sa-24-zona.jpg" class="w-100 h-100 object-fit-cover" alt="Vrata sa 45 zona">
+          </div>
+          <div class="card-body">
+            <h3 class="h5 fw-semibold text-dark">Vrata sa 45 zona</h3>
+            <p class="text-secondary small mb-3">Najviši nivo sigurnosti i najdetaljnija analiza detekcije.</p>
+            <a href="#prijavavideo" class="btn btn-model-outline btn-sm px-3 fw-semibold btn-straight">
+              Detaljnije o vratima <i class="bi bi-arrow-right ms-1"></i>
+            </a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
     <section class="text-dark bg-light py-5 section-breathe"   id="prijavavideo">
       <div class="container">
         <h3 class="text-center">Zainteresovani ste? <a href="tel:+38162421515"
@@ -571,18 +677,20 @@ Naši sistemi nude i mogućnost integracije sa video nadzorom i pametnim uređaj
             <h2 class="fw-semibold display-6 text-dark mb-3">Formular za besplatnu ponudu</h2>
               <br>
               <!-- === FORM: Besplatna ponuda === -->
+<!-- === FORM: Besplatna ponuda === -->
 <div class="row justify-content-center mb-80">
   <div class="col-lg-8">
     <form id="offerForm" novalidate>
       <div class="row g-3">
-                <!-- Samo obuka (checkbox optional) -->
+
+        <!-- Samo obuka (checkbox optional) -->
         <div class="col-md-12 pt-20 d-flex align-items-center">
-        <div class="form-check">
+          <div class="form-check">
             <input class="form-check-input" type="checkbox" id="obuka" name="obuka" value="Da">
             <label class="form-check-label" for="obuka">
-            Želim obuku za video nadzor 
+              Želim obuku za video nadzor 
             </label>
-        </div>
+          </div>
         </div>
 
         <!-- Ime (required) -->
@@ -613,44 +721,40 @@ Naši sistemi nude i mogućnost integracije sa video nadzorom i pametnim uređaj
           <div class="invalid-feedback"></div>
         </div>
 
-        <!-- Tip prostora (select) -->
+        <!-- Broj vrata (select) -->
         <div class="col-md-6 pt-20">
-          <label for="tipProstora" class="form-label"><strong>Izaberite tip prostora</strong></label>
+          <label for="tipProstora" class="form-label"><strong>Broj vrata</strong></label>
           <select id="tipProstora" name="tipProstora" class="form-select form-select-lg rounded-3">
-            <option>Stan</option>
-            <option>Kuća</option>
-            <option>Poslovni prostor</option>
-            <option>Drugo</option>
-          </select>
-          <div class="invalid-feedback"></div>
-        </div>
-        <!-- Vrsta usluge (required) -->
-        <div class="col-md-6 pt-20">
-        <label for="vrstaUsluge" class="form-label"><strong>Vrsta usluge</strong> <span class="text-danger">*</span></label>
-        <select id="vrstaUsluge" name="vrstaUsluge" class="form-select form-select-lg rounded-3">
-            <option value="">Kompletna ugradnja video nadzora</option>
-            <option>Instalacije za video nadzor</option>
-            <option>Samo oprema</option>
-            <option>Servis</option>
-            <option>Drugo</option>
-        </select>
-        </div>
-        <!-- Broj kamera (select) -->
-        <div class="col-md-6 pt-20">
-          <label for="brojKamera" class="form-label"><strong>Broj kamera</strong></label>
-          <select id="brojKamera" name="brojKamera" class="form-select form-select-lg rounded-3">
-            <option>Izaberite</option>
-            <option>Od 1-2</option>
-            <option>Od 3-4</option>
-            <option>4-8</option>
-            <option>Ne znam tačno, pozovite me</option>
+            <option>1</option>
+            <option>2</option>
+            <option>3</option>
+            <option>4</option>
+            <option>5</option>
+            <option>6</option>
+            <option>7</option>
+            <option>8</option>
+            <option>9</option>
+            <option>10</option>
+            <option>Više</option>
           </select>
           <div class="invalid-feedback"></div>
         </div>
 
-        
-
-
+        <!-- Vrsta događaja (select) -->
+        <div class="col-md-6 pt-20">
+          <label for="vrstaDogadjaja" class="form-label"><strong>Vrsta događaja</strong></label>
+          <select id="vrstaDogadjaja" name="vrstaDogadjaja" class="form-select form-select-lg rounded-3">
+            <option>Koncerti i muzički festivali</option>
+            <option>Škole i obrazovne ustanove</option>
+             <option>Aerodromi i stanice</option>
+            <option>Sudovi i državne institucije</option>
+             <option>Kompanije i industrijski objekti</option>
+            <option>Sportske manifestacije i arene</option>
+             <option>Sajmovi i konferencije</option>
+              <option>Drugo, kontaktirajte me</option>
+          </select>
+          <div class="invalid-feedback"></div>
+        </div>
 
         <!-- Napomena (textarea) -->
         <div class="col-12 pt-30">
@@ -661,22 +765,24 @@ Naši sistemi nude i mogućnost integracije sa video nadzorom i pametnim uređaj
 
         <!-- reCAPTCHA (required last) -->
         <div class="col-12 pt-20">
-          <div class="form-label mb-2"><strong>Proverite da niste robot</strong> <span class="text-danger">*</span></div>
+          <div class="form-label mb-2"><strong>Potvrdite da niste robot</strong> <span class="text-danger">*</span></div>
           <div id="captchaWrap" class="g-recaptcha" data-sitekey="YOUR_RECAPTCHA_SITE_KEY"></div>
           <div id="captchaError" class="invalid-feedback d-block mt-2" style="display:none;"></div>
         </div>
 
         <!-- Submit -->
         <div class="col-12 text-center pt-30">
-  <button type="submit" class="btn btn-success btn-lg rounded-pill px-4 fw-semibold d-inline-flex align-items-center gap-2">
-    <i class="bi bi-send-fill"></i>
-    Pošalji podatke
-  </button>
-</div>
+          <button type="submit" class="btn btn-success btn-lg rounded-pill px-4 fw-semibold d-inline-flex align-items-center gap-2">
+            <i class="bi bi-send-fill"></i>
+            Pošalji podatke
+          </button>
+        </div>
+
       </div>
     </form>
   </div>
 </div>
+
 <!-- === /FORM === -->
 
             </div>
