--- a/kontrola-prolaza/iznajmljivanje-metal-detektorska-vrata.html
+++ b/kontrola-prolaza/iznajmljivanje-metal-detektorska-vrata.html
@@ -664,7 +664,7 @@ Naši sistemi nude i mogućnost integracije sa video nadzorom i pametnim uređaj
 
     <section class="text-dark bg-light py-5 section-breathe"   id="prijavavideo">
       <div class="container">
-        <h3 class="text-center">Zainteresovani ste? <a href="tel:+38162421515"
+        <h3 class="text-center mt-80">Zainteresovani ste? <a href="tel:+38162421515"
      aria-label="Pozovite 062 42 15 15"
      class="btn btn-light btn-lg px-4 fw-semibold btn-cut-primary">
     Pozovite nas <i class="bi bi-telephone-fill ms-1"></i>
