--- a/kontrola-prolaza/iznajmljivanje-metal-detektorska-vrata.html
+++ b/kontrola-prolaza/iznajmljivanje-metal-detektorska-vrata.html
@@ -4,8 +4,8 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Najbezbedniji alarmi i alarmni sistemi za detekciju provale, HIKVISION, Paradox - Maximus security </title>
-  <meta name="description" content="Maximus Security projektuje, ugrađuje i održava alarmne sisteme za domove ili poslovne prostore koji omogućavaju real-time obaveštenja, daljinsko upravljanje putem mobilne aplikacije i potpunu kontrolu sigurnosti objekta - bilo da se nalazite kod kuće ili na putu.
+  <title>Iznajmljivanje metal detektorskih vrata- Maximus security </title>
+  <meta name="description" content="Iznajmljivanje metal detektorskih vrata
 Naši sistemi nude i mogućnost integracije sa video nadzorom i pametnim uređajima, čime obezbeđuju sveobuhvatnu i savremenu zaštitu prostora">
 
 
