Nove stranice sajt update 2026-1

--- a/index.html
+++ b/index.html
@@ -418,7 +418,7 @@
 
 
   <div class="clearfix"></div>
-  <footer class="footer-wrap mt-5 footer-position">
+  <footer class="footer-wrap footer-position">
     <div class="container">
       <!-- Inner rounded card that sits inside the red background -->
       <div class="footer-card rounded-4 p-4 p-lg-5">
