--- a/kontrola-prolaza/iznajmljivanje-metal-detektorska-vrata.html
+++ b/kontrola-prolaza/iznajmljivanje-metal-detektorska-vrata.html
@@ -335,7 +335,7 @@ Naši sistemi nude i mogućnost integracije sa video nadzorom i pametnim uređaj
       <div class="col-12 col-md-6 col-xl-3">
         <div class="metric-card">
           <div class="metric-label-vrata">Najnoviji modeli detektora</div>
-          <p class="metric-desc mb-0">Od 6 do 45 zona detekcije, uz preciznu lokalizaciju metalnih predmeta na telu. <a href="modeli-metal-detektorska-vrata.html">Pogledajte modele u ponudi <i class="bi bi-arrow-right ms-1"></i></a></p>
+          <p class="metric-desc mb-0">Od 6 do 45 zona detekcije, uz preciznu lokalizaciju metalnih predmeta na telu. <a href="#modelivrata">Pogledajte modele u ponudi <i class="bi bi-arrow-right ms-1"></i></a></p>
         </div>
       </div>
       <div class="col-12 col-md-6 col-xl-3">
@@ -453,11 +453,9 @@ Naši sistemi nude i mogućnost integracije sa video nadzorom i pametnim uređaj
  <section class="text-light bg-light section-breathe pt-30">
   <div class="container px-3 px-lg-4">
     <h2 class="fw-semibold display-6 text-center mb-30 text-black">
-      Najbolji izbor metal detektorskih vrata <br>za vaš događaj
+      Primena metal detektorskih vrata <br>u različitim industrijama
     </h2>
-    <p class="lead text-center text-secondary mb-50 mt-0">
-      Otkrijte najčešće namene metal detektorskih vrata i <span class="accent">pronađite rešenje koje vam najbolje odgovara</span>.
-    </p>
+    
 
     <div class="row g-4">
       <!-- 1. Koncerti i muzički festivali -->
@@ -546,12 +544,12 @@ Naši sistemi nude i mogućnost integracije sa video nadzorom i pametnim uređaj
 
       <!-- 7. Sajmovi i konferencije (sam u poslednjem redu) -->
       <div class="col-12 col-md-6 col-lg-4">
-        <article class="md-usage-card">
+        <article class="md-usage-card" >
           <div class="md-usage-card__bg" style="background-image: url('../assets/images/iznajmljivanje-prodaja-za-sajam-konferencija-poslovni-dogadjaj-metal-detektorska-vrata.png');"></div>
           <div class="md-usage-card__overlay"></div>
           <div class="md-usage-card__meta">
             <h3 class="md-usage-card__title">Sajmovi i konferencije</h3>
-            <p class="md-usage-card__text">
+            <p class="md-usage-card__text"    id="modelivrata">
               Idealno rešenje za višednevne poslovne događaje sa velikim brojem učesnika i posetilaca.
             </p>
           </div>
@@ -560,12 +558,11 @@ Naši sistemi nude i mogućnost integracije sa video nadzorom i pametnim uređaj
     </div>
   </div>
 </section>
-
 <section class="bg-white text-dark section-breathe py-5">
   <div class="container px-3 px-lg-4">
     <div class="text-center mb-50">
       <h2 class="fw-semibold display-6 mb-3">Nudimo najbezbednije <br>modele matal detektorskih vrata</h2>
-      <p class="lead text-secondary mb-0">Odaberite nivo detekcije koji najbolje odgovara vašoj sigurnosnoj situaciji.</p>
+      <p class="lead text-secondary mb-0">Odaberite nivo detekcije koji najbolje odgovara vašim potrebama. <br>(Niste sigurni koja vrata da izaberete? <a href="tel:+38162421515">Pozovite nas  <i class="bi bi-telephone"></i></a> nas za savet.)</p>
     </div>
 
     <div class="row g-4">
@@ -682,16 +679,6 @@ Naši sistemi nude i mogućnost integracije sa video nadzorom i pametnim uređaj
   <div class="col-lg-8">
     <form id="offerForm" novalidate>
       <div class="row g-3">
-
-        <!-- Samo obuka (checkbox optional) -->
-        <div class="col-md-12 pt-20 d-flex align-items-center">
-          <div class="form-check">
-            <input class="form-check-input" type="checkbox" id="obuka" name="obuka" value="Da">
-            <label class="form-check-label" for="obuka">
-              Želim obuku za video nadzor 
-            </label>
-          </div>
-        </div>
 
         <!-- Ime (required) -->
         <div class="col-md-6 pt-20">
